[gd_scene load_steps=3 format=2]

[ext_resource path="res://Inventory/UI/InventoryWindow.gd" type="Script" id=1]
[ext_resource path="res://Inventory/UI/ItemSlot.tscn" type="PackedScene" id=2]

[node name="InventoryWindow" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 800, 300 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
slot_scene = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 300.0
custom_minimum_size = Vector2( 800, 300 )
color = Color( 0.5, 0.5, 0.5, 0.7 )

[node name="UpperOverlay" type="Control" parent="Background"]
anchor_right = 1.0
anchor_bottom = 0.1
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryName" type="Label" parent="Background/UpperOverlay"]
anchor_left = 0.5
anchor_right = 0.5
offset_top = 15.0
grow_horizontal = 2
text = "Inventory Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="Background/UpperOverlay"]
anchor_left = 1.0
anchor_right = 1.0
offset_top = 12.0
offset_right = -20.0
grow_horizontal = 0
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
text = "X"

[node name="InventoryGrid" type="GridContainer" parent="Background"]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 40.0
offset_right = -60.0
offset_bottom = -40.0
theme_override_constants/v_separation = 8
theme_override_constants/h_separation = 8
columns = 7
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/UpperOverlay/CloseButton" to="." method="_on_CloseButton_pressed"]
